[package]
name = "nft"
version = "0.1.0"
description = "Cryptomore program"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.2"
solana-program = "1.6.10"
thiserror = "1.0.25"
arrayref = "~0.3.6"
spl-token = { version="~3.3.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-sdk = "1.6.10"
solana-program-test = "1.6.10"

[lib]
crate-type = ["cdylib", "lib"]